src/Page-1.css
/* ... */
@media (max-width: 575px) {
  .u-section-2 {
    min-height: 35px;
  }

  .u-section-2 .u-sheet-1 {
    min-height: 433px;
  }

  .u-section-2 .u-layout-wrap-1 {
    margin-top: 7px;
    margin-bottom: 7px;
  }

  .u-section-2 .u-layout-cell-1 {
    min-height: 419px;
  }

  .u-section-2 .u-container-layout-1 {
    padding-top: 0;
    padding-bottom: 22px;
  }
}.u-section-3 {
  min-height: 318px;
}

.u-section-3 .u-sheet-1 {
  min-height: 501px;
}

.u-section-3 .u-layout-wrap-1 {
  pointer-events: auto;
  margin-top: 1px;
  margin-bottom: 18px;
}

.u-section-3 .u-layout-cell-1 {
  min-height: 482px;
  pointer-events: auto;
}

.u-section-3 .u-container-layout-1 {
  padding: 30px 60px;
}

.u-section-3 .u-text-1 {
  font-size: 3rem;
  margin: 23px 0 0;
}

.u-section-3 .u-text-2 {
  font-size: 2.25rem;
  font-weight: 700;
  margin: 44px 0 0;
}

.u-section-3 .u-text-3 {
  font-size: 1.25rem;
  margin: 57px 0 0;
}

@media (max-width: 1199px) {
  .u-section-3 .u-sheet-1 {
    min-height: 89px;
  }

  .u-section-3 .u-layout-cell-1 {
    min-height: 397px;
  }
}

@media (max-width: 991px) {
  .u-section-3 {
    min-height: 66px;
  }

  .u-section-3 .u-layout-cell-1 {
    min-height: 414px;
  }

  .u-section-3 .u-container-layout-1 {
    padding-left: 30px;
    padding-right: 30px;
  }
}

@media (max-width: 767px) {
  .u-section-3 .u-layout-cell-1 {
    min-height: 311px;
  }

  .u-section-3 .u-container-layout-1 {
    padding-left: 50px;
    padding-right: 50px;
  }
}

@media (max-width: 575px) {
  .u-section-3 .u-sheet-1 {
    min-height: 2030px;
  }

  .u-section-3 .u-layout-cell-1 {
    min-height: 2006px;
  }

  .u-section-3 .u-text-1 {
    font-size: 2.25rem;
    margin-top: 3px;
  }

  .u-section-3 .u-text-2 {
    font-size: 1.5rem;
  }
}.u-section-4 {
  min-height: 318px;
}

.u-section-4 .u-sheet-1 {
  min-height: 221px;
}

.u-section-4 .u-layout-wrap-1 {
  pointer-events: auto;
  margin-top: 1px;
  margin-bottom: 1px;
}

.u-section-4 .u-layout-cell-1 {
  min-height: 220px;
  pointer-events: auto;
}

.u-section-4 .u-container-layout-1 {
  padding: 22px 60px 30px;
}

.u-section-4 .u-text-1 {
  font-size: 2.25rem;
  font-weight: 700;
  margin: 1px 0 0;
}

.u-section-4 .u-text-2 {
  font-size: 1.25rem;
  margin: 57px 0 0;
}

@media (max-width: 1199px) {
  .u-section-4 .u-sheet-1 {
    min-height: 89px;
  }

  .u-section-4 .u-layout-cell-1 {
    min-height: 181px;
  }
}

@media (max-width: 991px) {
  .u-section-4 {
    min-height: 66px;
  }

  .u-section-4 .u-layout-cell-1 {
    min-height: 256px;
  }

  .u-section-4 .u-container-layout-1 {
    padding-left: 30px;
    padding-right: 30px;
  }
}

@media (max-width: 767px) {
  .u-section-4 .u-layout-cell-1 {
    min-height: 192px;
  }

  .u-section-4 .u-container-layout-1 {
    padding-left: 50px;
    padding-right: 50px;
  }
}

@media (max-width: 575px) {
  .u-section-4 .u-layout-cell-1 {
    min-height: 121px;
  }

  .u-section-4 .u-text-1 {
    font-size: 1.5rem;
  }
}.u-section-5 {
  min-height: 318px;
}

.u-section-5 .u-sheet-1 {
  min-height: 342px;
}

.u-section-5 .u-layout-wrap-1 {
  pointer-events: auto;
  margin-top: 1px;
  margin-bottom: 1px;
}

.u-section-5 .u-layout-cell-1 {
  min-height: 341px;
  pointer-events: auto;
}

.u-section-5 .u-container-layout-1 {
  padding: 23px 60px 25px;
}

.u-section-5 .u-text-1 {
  font-size: 2.25rem;
  font-weight: 700;
  margin: 1px 0 0;
}

.u-section-5 .u-text-2 {
  font-size: 1.25rem;
  margin: 57px 0 0;
}

@media (max-width: 1199px) {
  .u-section-5 .u-sheet-1 {
    min-height: 89px;
  }

  .u-section-5 .u-layout-cell-1 {
    min-height: 281px;
  }
}

@media (max-width: 991px) {
  .u-section-5 {
    min-height: 66px;
  }

  .u-section-5 .u-layout-cell-1 {
    min-height: 414px;
  }

  .u-section-5 .u-container-layout-1 {
    padding-left: 30px;
    padding-right: 30px;
  }
}

@media (max-width: 767px) {
  .u-section-5 .u-layout-cell-1 {
    min-height: 311px;
  }

  .u-section-5 .u-container-layout-1 {
    padding-left: 50px;
    padding-right: 50px;
  }
}

@media (max-width: 575px) {
  .u-section-5 .u-layout-cell-1 {
    min-height: 196px;
  }

  .u-section-5 .u-text-1 {
    font-size: 1.5rem;
  }
}.u-section-6 {
  min-height: 318px;
}

.u-section-6 .u-sheet-1 {
  min-height: 502px;
}

.u-section-6 .u-layout-wrap-1 {
  pointer-events: auto;
  margin-top: 1px;
  margin-bottom: 1px;
}

.u-section-6 .u-layout-cell-1 {
  min-height: 500px;
  pointer-events: auto;
}

.u-section-6 .u-container-layout-1 {
  padding: 30px 60px 27px;
}

.u-section-6 .u-text-1 {
  font-size: 3rem;
  margin: 23px 0 0;
}

.u-section-6 .u-text-2 {
  font-size: 2.25rem;
  font-weight: 700;
  margin: 44px 0 0;
}

.u-section-6 .u-text-3 {
  font-size: 1.25rem;
  margin: 57px 0 0;
}

@media (max-width: 1199px) {
  .u-section-6 .u-sheet-1 {
    min-height: 89px;
  }

  .u-section-6 .u-layout-cell-1 {
    min-height: 412px;
  }
}

@media (max-width: 991px) {
  .u-section-6 {
    min-height: 66px;
  }

  .u-section-6 .u-layout-cell-1 {
    min-height: 414px;
  }

  .u-section-6 .u-container-layout-1 {
    padding-left: 30px;
    padding-right: 30px;
  }
}

@media (max-width: 767px) {
  .u-section-6 .u-layout-cell-1 {
    min-height: 311px;
  }

  .u-section-6 .u-container-layout-1 {
    padding-left: 50px;
    padding-right: 50px;
  }
}

@media (max-width: 575px) {
  .u-section-6 .u-layout-cell-1 {
    min-height: 196px;
  }

  .u-section-6 .u-text-1 {
    font-size: 2.25rem;
  }

  .u-section-6 .u-text-2 {
    font-size: 1.5rem;
  }
}.u-section-7 {
  min-height: 318px;
}

.u-section-7 .u-sheet-1 {
  min-height: 371px;
}

.u-section-7 .u-layout-wrap-1 {
  pointer-events: auto;
  margin-top: 1px;
  margin-bottom: 1px;
}

.u-section-7 .u-layout-cell-1 {
  min-height: 369px;
  pointer-events: auto;
}

.u-section-7 .u-container-layout-1 {
  padding: 30px 60px;
}

.u-section-7 .u-text-1 {
  font-size: 2.25rem;
  font-weight: 700;
  margin: 23px 0 0;
}

.u-section-7 .u-text-2 {
  font-size: 1.25rem;
  margin: 57px 0 0;
}
/* ... */

